added property forms, cloudinary, toast notifications etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["googleusercontent", "signin", "zipcode"]
+  "cSpell.words": [
+    "cloudinary",
+    "googleusercontent",
+    "NEXTAUTH",
+    "photoswipe",
+    "propertypulse",
+    "signin",
+    "toastify",
+    "zipcode"
+  ]
 }
