added Mapbox, Bookmarks and Sharing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
     "cloudinary",
+    "geocode",
     "googleusercontent",
+    "mapbox",
     "NEXTAUTH",
     "photoswipe",
     "propertypulse",
