--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "photoswipe": "^5.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
